# kv-store

./: .gitignore  AGENTS.md  Cargo.toml  justfile
common/: Cargo.toml  build.rs
common/proto/: admin.proto  storage.proto
common/src/: auth.rs  crc64hasher.rs  healthcheck.rs  kv.rs  lib.rs
kvstore/: Cargo.toml
kvstore/src/: auth.rs  connections.rs  main.rs  namespace.rs  tenant.rs
storage/: Cargo.toml
storage/src/: auth.rs  lookup.rs  main.rs  namespace.rs  partition.rs
wisckey/: Cargo.toml
wisckey/src/: lib.rs
