# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
prost = "0.12.1"
prost-types = "0.12.1"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.17", features = ["json"]}
tracing-actix-web = "0.7.8"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.5.0", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
actix-web = "4.4.0"
tracing-attributes = "0.1.27"
futures = "0.3.28"
derive_more = "0.99.17"
sha2 = "0.10.8"
base64 = "0.21.5"
jsonwebtoken = {version =  "9.1.0", features = ["use_pem"] }
crc32fast = "1.3.2"
git-version = "0.3.5"
secrecy = "0.8.0"
const_format = "0.2.32"
dashmap = "5.5.3"

[workspace]
members = ["storage", "common", "kvstore"]
resolver = "2"
