# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tonic = "0.14.5"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.17", features = ["json"]}
tracing-actix-web = "0.7.8"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.5.0", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.107"
actix-web = "4.4.0"
tracing-attributes = "0.1.27"
futures = "0.3.28"
derive_more = "2.1.1"
sha2 = "0.11.0"
base64 = "0.22.1"
jsonwebtoken = {version = "10.3.0", features = ["use_pem"] }
crc32fast = "1.3.2"
git-version = "0.3.5"
secrecy = "0.10.3"
const_format = "0.2.32"
dashmap =  { version = use log::warn;"6.1.0", features = ["rayon"] }
jumphash = { version = "0.1.8"}
rayon = "1.5.1"

[workspace]
members = ["storage", "common", "kvstore"]
resolver = "2"
