# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tonic = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["json"]}
tracing-actix-web = "0.7.21"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.23.1", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
actix-web = "4.13.0"
tracing-attributes = "0.1.31"
futures = "0.3.32"
derive_more = "2.1.1"
sha2 = "0.11.0"
base64 = "0.22.1"
jsonwebtoken = {version = "10.3.0", features = ["use_pem"] }
crc32fast = "1.5.0"
git-version = "0.3.9"
secrecy = "0.10.3"
const_format = "0.2.36"
dashmap =  { version = "6.1.0", features = ["rayon"] }
jumphash = { version = "0.1.8"}
rayon = "1.12.0"

[workspace]
members = ["storage", "common", "kvstore"]
resolver = "2"
