[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jumphash = "0.1.8"
prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}
actix-web = "4.4.0"
serde = { version = "1.0.189", features = ["derive"] }
tracing-actix-web = {workspace = true}

[build-dependencies]
tonic-build = "0.10.2"
