[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}
actix-web = {workspace = true}
serde = {workspace = true}
tracing = {workspace = true}
tracing-actix-web = {workspace = true}
uuid = {workspace = true}
sha2 = {workspace = true}
base64 = {workspace = true}
jsonwebtoken = {workspace = true}
secrecy = {workspace = true}
crc64fast = "1.0.0"

[build-dependencies]
tonic-build = "0.11.0"
