[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
tonic = {workspace = true, features = ["transport"]}
actix-web = "4.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
derive_more = "0.99.17"
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["json"]}
tracing-actix-web = {workspace = true}
tracing-attributes = "0.1.27"
tower = { version = "0.4.13", features = ["tracing", "reconnect", "retry"] }
