[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
tonic = {workspace = true, features = ["transport"]}
actix-web = {workspace = true}
serde = { workspace = true }
serde_json = {workspace = true}
derive_more = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-actix-web = {workspace = true}
tracing-attributes = {workspace = true}
#tower = { version = "0.4.13", features = ["tracing", "reconnect", "retry"] }
futures = {workspace = true}
uuid = {workspace = true}
