[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
tonic = "0.10.2"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"]}
prost = "0.12.1"
prost-types = "0.12.1"
