[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
tonic = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
prost = {workspace = true}
prost-types = {workspace = true}
