[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
prost = {workspace = true}
prost-types = {workspace = true}
rocksdb = {version = "0.21.0", features = ["multi-threaded-cf"]}
tonic = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
tracing = {workspace = true}
tracing-attributes = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = {workspace = true}
serde = {workspace = true}
crc32fast = {workspace = true}
dashmap = {workspace = true}